test/parse/assert/bad-assert-return-arithmetic-nan-too-few.txt
;;; TOOL: wast2json
;;; ERROR: 1
(module
  (func $foo (param i32) (result f32) 
    f32.const 0)
  (export "foo" (func $foo)))
(assert_return_arithmetic_nan (invoke "foo"))
(;; STDERR ;;;
out/test/parse/assert/bad-assert-return-arithmetic-nan-too-few.txt:7:32: error: too few parameters to function. got 0, expected 1
(assert_return_arithmetic_nan (invoke "foo"))
                               ^^^^^^
;;; STDERR ;;)
